--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,7 +17,8 @@ body {
   background-color: #ffcb74;
   padding: 0;
   margin: 0;
-  font-size: 36pt;
+  /* font-size: 36pt; */
+  /* font-size: 24pt; */
   font-family: 'Montserrat', sans-serif;
 }
 
@@ -31,7 +32,8 @@ h2 {
 }
 
 .title-bar {
-  font-size: 36pt;
+  /* font-size: 36pt; */
+  /* font-size: 24pt; */
   text-align: center;
   font-family: 'Open Sans', sans-serif;
 }
@@ -43,7 +45,8 @@ h2 {
 }
 
 .buttons {
-  font-size: 50pt;
+  /* font-size: 50pt; */
+  font-size: 36pt;
   margin: 0 auto;
 }
 
@@ -57,7 +60,8 @@ button {
   background-color: #ea907a;
   display: block;
   margin: 10px auto;
-  font-size: 36pt;
+  /* font-size: 36pt; */
+  font-size: 15pt;
   text-align: left;
   padding: 0 0 0 30px;
   font-family: 'Montserrat';
@@ -85,9 +89,10 @@ label>input[type="radio"]+*::before {
   content: "";
   display: inline-block;
   vertical-align: unset;
-  width: 2.5rem;
+  width: 1.5rem;
+  /* 2.5 for larger pages */
   /*change these to change the size of it*/
-  height: 2.5rem;
+  height: 1.5rem;
   /* margin-right: 0.3rem; */
   margin-right: 10px;
   border-radius: 50%;
@@ -131,6 +136,7 @@ label {
 .footer {
   text-align: center;
   /* font-family: "Open Sans Light", sans-serif; */
+  font-size: 18pt;
 }
 
 a {
