--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,18 +122,21 @@ label {
 }
 
 .check1 {
-  width: 40%;
+  /* width: 40%; */
   display: inline;
   font-size: 18pt;
-  margin-bottom: 10px;
+  /* margin-bottom: 100px; */
+  margin-right: 68%;
+  position: relative;
+  bottom: 20px;
 }
 
 .check2 {
-  width: 40%;
+  /* width: 40%; */
   display: inline;
   /* margin: 0 0 0 30px; */
   font-size: 18pt;
-  margin-top: 10px;
+  /* padding-top: 100px; */
 }
 
 #joke {
@@ -152,9 +155,97 @@ a {
   text-decoration: none;
 }
 
-/*
 @media (min-width: 640px) {
-  body {
-    font-size: 28pt;
+  h1 {
+    font-size: 2rem;
   }
-} */
+
+  h2 {
+    font-size: 2rem;
+    text-align: unset;
+  }
+
+  button {
+    margin: unset;
+    padding: 0 10px;
+    display: inline;
+    /* width: 170px; */
+    width: 225px;
+    text-align: center;
+  }
+
+  .radio {
+    margin: 25px;
+  }
+
+  .check1 {
+    margin: 0 50px 0 0;
+    position: unset;
+    bottom: unset;
+  }
+
+  #joke {
+    font-size: 18pt;
+  }
+
+  .footer-link {
+    font-size: unset;
+  }
+
+  h6.footer-link {
+    margin: 15px 0;
+  }
+}
+
+@media (min-width: 800px) {
+  .page-wrap {
+    padding: 20px 30px;
+  }
+
+  h1 {
+    font-size: 36pt;
+  }
+
+  h2 {
+    font-size: 36pt;
+  }
+
+  button {
+    width: 200px;
+    font-size: 18pt;
+  }
+
+  .footer {
+    margin: 20px 0;
+  }
+
+  .footer-link {
+    display: inline;
+    padding: 0 10px;
+    /* font-size: unset; */
+    /* font-size: 12pt; */
+  }
+}
+
+@media (min-width: 1024px) {
+  body {
+    background-color: #f4f6ff;
+  }
+
+  h1 {
+    background-color: #ffcb74;
+    margin: 0 auto;
+    padding: 31.16px
+  }
+
+  .page-wrap {
+    width: 900px;
+    margin: 0 auto;
+  }
+
+  .footer {
+    background-color: #ffcb74;
+    margin: 0 auto;
+    padding: 31.16px
+  }
+}
